--- a/04-objects/object.wp-admin.css
+++ b/04-objects/object.wp-admin.css
@@ -2,9 +2,10 @@ html {
     font-size: 62.5%;
 }
 
-.editor-styles-wrapper {
+.wp-admin .editor-styles-wrapper {
     font-family: var(--font-family);
-    font-size: var(--font-size)
+    font-size: var(--font-size);
+    line-height: var(--line-height);
 }
 
 /*--------------------------------------------------------------
@@ -51,6 +52,7 @@ html {
 ,[data-type="wtp/block-media"]:not(.has-child-selected) [data-type="core/image"] .editor-block-list__block-edit
 ,[data-type="wtp/block-media"]:not(.has-child-selected) [data-type="core/image"] .editor-block-list__block-edit > [data-block] { 
     height: 100%; 
+    /* border: solid red; */
 }
 
 [data-type="wtp/block-media"]:not(.has-child-selected) .components-resizable-box__container {
